small mistakes on package file

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node JsAsset/backend_Src/app.js"
+    "start": "node JsAsset/backend_Src/index.js"
   },
   "keywords": [],
   "author": "Arnab Kundu",
